2005-06-13 Igor Zivkovic <igor@linuxfromscratch.org>
	* Corrected the MySQL script to make it compatible with the new LFS
	boot scripts (Jay D. McHugh).

2005-05-31 Randy McMurchy <randy@linuxfromscratch.org>
	* Removed explicit path from GDM script commands so that the commands
	will work no matter where $GNOME_PREFIX is.

2005-05-30 Randy McMurchy <randy@linuxfromscratch.org>
	* Updated GDM script to GNOME-2.10.

2005-05-09 Igor Zivkovic <igor@linuxfromscratch.org>
	* Added a killproc parameter to mysql (Nathan Coulson).

2005-03-13 Bruce Dubbs <bdubbs@linuxfromscratch.org>
	* Updated openldap1 and openldap2 to check for running
	daemons before starting.

2005-03-13 Bruce Dubbs <bdubbs@linuxfromscratch.org>
	* Added iptables initialization script.

2005-03-02 Randy McMurchy <randy@linuxfromscratch.org>
	* Added 'status' option to portmap bootscript.

2005-01-02 DJ Lucas <dj@linuxfromscratch.org>
	* Added courier bootscript.

2004-12-27 Randy McMurchy <randy@linuxfromscratch.org>
	* Changed Exim bootscript to start the daemon with -q15m instead
	  of -q1m.

2004-11-21 Igor Zivkovic <igor@linuxfromscratch.org>
	* Removed setclock symlinks at install-ntp target and added a
	  substitute command in the book.

2004-10-27 Randy McMurchy <randy@linuxfromscratch.org>
	* Added new bootscript for Stunnel.

2004-10-23 Randy McMurchy <randy@linuxfromscratch.org>
	* Modified PostgreSQL script because the pg_ctl script
	  is no longer able to run as user root.

2004-10-20 DJ Lucas <dj@linuxfromscratch.org>
	* Added ability to print assigned addresses when using
	  dhcpcd service script.

2004-10-13 Igor Zivkovic <igor@linuxfromscratch.org>
	* Added ntpd -gqx to ntp bootscript start case to set
	  the initial time (Thomas Trepl)
	* Added setclock stop symlinks to runlevels 0, 1, 2
	  and 6 on install-ntp target to write the system time
	  back to hardware clock (Jeremy Utley)

2004-10-11 DJ Lucas <dj@linuxfromscratch.org>
	* Fixed multiple errors in nfs-server bootscript